fixed some inputfield jump issue

--- a/src/components/sass/login.module.scss
+++ b/src/components/sass/login.module.scss
@@ -21,7 +21,7 @@
         height: 60px;
         width: 22rem;
         // display: flex;
-        padding: 2rem 1.5rem;
+        padding: 1.5rem 1.5rem;
         // justify-content: start;
         border:none;
         // border: 2px solid rgb(247, 247, 247);
